QMAPS-1589 fix right margin on geoloc and direction buttons on mobile

--- a/src/scss/includes/direction.scss
+++ b/src/scss/includes/direction.scss
@@ -289,7 +289,7 @@ button.direction_shortcut {
     box-shadow: rgba(0,0,0,.2) 0 2px 12px 0;
     position: fixed;
     bottom: 66px;
-    right: $spacing-m;
+    right: 10px;
     font-size: 25px;
     opacity: 1;
     transition: opacity .2s;
