--- a/src/scss/includes/map_theme.scss
+++ b/src/scss/includes/map_theme.scss
@@ -272,6 +272,7 @@
 
   .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
     float: inherit;
+    margin-right: 10px;
   }
 
   .mapboxgl-ctrl-bottom-right  {
